[metadata]
name = vllm-now
description = "Ganler's vLLM utilities."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ganler/vllm-now
platform = any
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fire>=0.6.0
    gputil>=1.4.0

[options.entry_points]
console_scripts =
    vllm-now = vllm-now.main:main
